force-app/main/default/objects/Recipe_Ingredient__c/Recipe_Ingredient__c.object-meta.xml
<CustomObject>
    <label>Recipe Ingredient</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Recipe Ingredient No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>