force-app/main/default/objects/Recipe_Ingredient__c/fields/Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Ingredient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingredient</label>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipLabel>Recipe Ingredients</relationshipLabel>
    <relationshipName>Recipe_Ingredients</relationshipName>
    <type>Lookup</type>
</CustomField>