force-app/main/default/objects/Recipe_Ingredient__c/fields/Quantity_Required__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Required__c</fullName>
    <label>Quantity Required</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>